Visual config and add conclusion

--- a/sections/subsections/translation.tex
+++ b/sections/subsections/translation.tex
@@ -4,9 +4,9 @@ For single sentence translation, we utilised the pretrained 'elan-mt-ja-en' mode
 
 \paragraph{Model Architecture}
 
-\begin{figure}[H]
+\begin{figure}[!ht]
   \centering
-  \includegraphics[width=0.7\linewidth]{img/marian.pdf}
+  \includegraphics[width=0.85\linewidth]{img/marian.pdf}
   \caption{MarianMT Architecture}
   \label{fig:marian-mt}
 \end{figure}
