--- a/sections/subsections/trans-results.tex
+++ b/sections/subsections/trans-results.tex
@@ -1,11 +1,12 @@
 \begin{table}[H]
 \centering
-\caption{Performance Comparison of GoogleTranslator, Elan, Qwen2.5-0.5B, and Qwen1.5-1.5B Models}
+\caption{Performance Comparison of GoogleTranslator, Elan, Qwen2.5-0.5B, and Qwen2.5-1.5B Models}
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{lcccccc}
 \toprule
-\textbf{Model} & \textbf{BLEU} & \textbf{SacreBLEU} & \textbf{chrf} & \textbf{chrF++} & \textbf{BERTScore} & \textbf{COMET} \\
-GoogleTranslator-ja-en & 0.0948 & 0.1598 & 0.3534 & 0.3262 & 0.5831 & 0.7378\\
+\textbf{Model} & \textbf{BLEU} & \textbf{SacreBLEU} & \textbf{chrf} & \textbf{chrF++} & \textbf{BERTScore F1} & \textbf{COMET} \\
+\midrule
+GoogleTranslator-ja-en & 0.0948 & \textbf{0.1598} & \textbf{0.3534} & \textbf{0.3262} & 0.5831 & 0.7378\\
 \midrule
 % Elan Models
 Elan Base & 0.0261 & 0.0719 & 0.2123 & 0.1848 & 0.5586 & 0.591 \\
@@ -20,15 +21,15 @@ Qwen2.5-0.5B-Instruct (finetuned, context\_window = 2) & 0.0497 & 0.0843 & 0.278
 Qwen2.5-0.5B-Instruct (finetuned, context\_window = 1) & 0.0498 & 0.0797 & 0.2788 & 0.2608 & 0.5782 & 0.6319 \\
 \midrule
 % 1.5B Models (Renamed to Qwen1.5-1.5B-Instruct)
-Qwen1.5-1.5B-Instruct (finetuned, context\_window = 5) & 0.0618 & 0.098 & 0.2905 & 0.2721 & 0.6042 & 0.6813 \\
-Qwen1.5-1.5B-Instruct (finetuned, context\_window = 4) & 0.05282 & 0.0986 & 0.2868 & 0.2685 & 0.6027 & 0.683 \\
-Qwen1.5-1.5B-Instruct (finetuned, context\_window = 3) & 0.0621 & 0.1014 & 0.2939 & 0.2749 & 0.603 & 0.6899 \\
-Qwen1.5-1.5B-Instruct (finetuned, context\_window = 2) & 0.0623 & 0.0995 & 0.2944 & 0.2756 & 0.6044 & 0.6905 \\
-Qwen1.5-1.5B-Instruct (finetuned, context\_window = 1) & 0.0598 & 0.1021 & 0.2903 & 0.2719 & 0.6044 & 0.6914 \\
+Qwen2.5-1.5B-Instruct (finetuned, context\_window = 5) & 0.0618 & 0.098 & 0.2905 & 0.2721 & 0.6042 & 0.6813 \\
+Qwen2.5-1.5B-Instruct (finetuned, context\_window = 4) & 0.05282 & 0.0986 & 0.2868 & 0.2685 & 0.6027 & 0.683 \\
+Qwen2.5-1.5B-Instruct (finetuned, context\_window = 3) & 0.0621 & 0.1014 & 0.2939 & 0.2749 & 0.603 & 0.6899 \\
+Qwen2.5-1.5B-Instruct (finetuned, context\_window = 2) & 0.0623 & 0.0995 & 0.2944 & 0.2756 & 0.6044 & 0.6905 \\
+Qwen2.5-1.5B-Instruct (finetuned, context\_window = 1) & 0.0598 & 0.1021 & 0.2903 & 0.2719 & \textbf{0.6049} & 0.6914 \\
 \midrule
 2+2 \cite{hinami2021towards} & 0.2114 & - & - & - & - & 0.779 \\
 Scene-NMT \cite{hinami2021towards} &  0.2102 & - & - & - & - &  0.782 \\
-Scene-aware NMT \cite{kaino2024utilizing} & 0.2146 & - & - & - & - & 0.79 \\
+Scene-aware NMT \cite{kaino2024utilizing} & \textbf{0.2146} & - & - & - & - & \textbf{0.79} \\
 \bottomrule
 
 \end{tabular}%
