--- a/sections/subsubsections/ocr-pip.tex
+++ b/sections/subsubsections/ocr-pip.tex
@@ -1,8 +1,8 @@
 The OCR pipeline processes segmented speech bubble regions through a systematic sequence of extraction, recognition, and refinement operations to convert visual Japanese text into machine-readable characters, as illustrated in Figure \ref{fig:ocr_pipeline}.
 
-\begin{figure}[H]
+\begin{figure}[!ht]
     \centering
-    \includegraphics[width=\textwidth]{img/ocr_pipeline.pdf}
+    \includegraphics[width=0.9\textwidth]{img/ocr_pipeline.pdf}
     \caption{OCR Pipeline}
     \label{fig:ocr_pipeline}
 \end{figure}
