--- a/references.bib
+++ b/references.bib
@@ -603,4 +603,17 @@
   pages     = {8869--8878}
 }
 
+@inproceedings{pryzant-etal-2018-jesc,
+  title     = {{JESC}: {J}apanese--{E}nglish Subtitle Corpus},
+  author    = {Pryzant, Reid and
+               Chung, Youngjoo and
+               Jurafsky, Dan and
+               Britz, Denny},
+  booktitle = {Proceedings of the Eleventh International Conference on Language Resources and Evaluation (LREC 2018)},
+  year      = {2018},
+  month     = {May},
+  address   = {Miyazaki, Japan},
+  publisher = {European Language Resources Association (ELRA)},
+  url       = {https://aclanthology.org/L18-1182/}
+}
 
