Add end-to-end-pipeline results

--- a/main.tex
+++ b/main.tex
@@ -31,6 +31,9 @@
 \usepackage{amsmath,amssymb} 
 \usepackage{placeins}
 \usepackage{setspace}
+\usepackage{bbm}
+\usepackage{adjustbox}
+
 \setstretch{1.15}
 \usetikzlibrary{positioning, arrows.meta, calc}
 
@@ -227,6 +230,10 @@
 
 \subsection{Translation}
 \input{sections/subsections/trans-results.tex}
+
+\subsection{End-to-End Pipeline}
+\input{sections/subsections/overall-pip}
+
 
 \section{Desktop Application}
 \subsection{Architecture Overview}
