--- a/references.bib
+++ b/references.bib
@@ -617,3 +617,14 @@
   url       = {https://aclanthology.org/L18-1182/}
 }
 
+@article{kendall1938new,
+  title     = {A New Measure of Rank Correlation},
+  author    = {Kendall, Maurice G.},
+  journal   = {Biometrika},
+  volume    = {30},
+  number    = {1/2},
+  pages     = {81--93},
+  year      = {1938},
+  doi       = {10.2307/2332226},
+  url       = {https://www.jstor.org/stable/2332226}
+}
