--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,3 +1,11 @@
-In this work, we presented an end-to-end pipeline for automatic Japanese manga translation, integrating speech bubble segmentation, optical character recognition, machine translation, and typesetting into a unified Qt-based desktop application. Our system leverages YOLOv8 for bubble and panel segmentation, MangaOCR for Japanese text recognition with post-processing, and Qwen2.5-1.5B-Instruct fine-tuned with LoRA for context-aware translation. Rather than replacing human translators, the application aims to reduce repetitive manual effort while providing editing functionality at each stage of the workflow.
+In this work, we present an end-to-end pipeline for automatic Japanese manga translation, integrating speech bubble segmentation, optical character recognition, machine translation, and typesetting into a unified Qt-based desktop application. Our system leverages YOLO family segmentation models for bubble and panel segmentation, MangaOCR for Japanese text recognition with post-processing, and Qwen2.5-1.5B-Instruct fine-tuned with LoRA for context-aware translation.
+A limitation of segmentation models is that bubbles with transparent background are failed to detect. 
+By assuming that images with a width-to-height ratio greater than 1.0 contain two pages, we can split them for separate processing and merge the results afterward. However, this assumption does not always hold.
+For layout analysis, while our approach has proven effective, it is still a naive one. By dividing the image horizontally and grouping panels into different rows, a panel whose height spans across two rows may be misclassified, making the correct reading order harder to follow.\\
 
-Future work includes improving OCR accuracy through expanded training data and enhanced post-processing techniques, developing more sophisticated context-aware translation that better captures conversation history and speaker identity across dialogue sequences, and refining the application interface to provide a more intuitive experience with additional features tailored to professional translator workflows.
+Future work includes improving OCR accuracy through expanded training data and enhanced post-processing techniques. For translation, more aggressive LoRA fine-tuning could be applied by increasing the number of training epochs and incorporating higher-quality Japanese–English parallel datasets. The flexible JSON schema provides opportunities to integrate richer contextual information, which can be exploited in the long run.
+More sophisticated context-aware translation that captures conversation history and speaker identity across dialogue sequences can be developed. The application interface can be improved to provide a more intuitive experience with additional features tailored to professional translator workflows.
+Entire image could be processed as a single unit to avoid errors caused by incorrect page splitting.
+To reduce noise in the overall pipeline, future work will also focus on improving the panel and speech bubble ordering algorithms, ensuring a more accurate reading sequence.
+
+
