--- a/sections/subsections/translation.tex
+++ b/sections/subsections/translation.tex
@@ -25,9 +25,9 @@ We integrate three specific variants of the model to balance translation quality
     \toprule
     \textbf{Model Name} & \textbf{Parameters} & \textbf{Description} \\
     \midrule
-    \rowcolor{gray!10} Mitsua/elan-mt-bt-ja-en & 61M & Back-translation augmented variant with improved handling of colloquial expressions \\
+    Mitsua/elan-mt-bt-ja-en & 61M & Back-translation augmented variant with improved handling of colloquial expressions \\
     Mitsua/elan-mt-base-ja-en & 61M & Base model trained on parallel corpora \\
-    \rowcolor{gray!10} Mitsua/elan-mt-tiny-ja-en & 15M & Lightweight variant optimized for inference speed \\
+    Mitsua/elan-mt-tiny-ja-en & 15M & Lightweight variant optimized for inference speed \\
     \bottomrule
   \end{tabular}
   \caption{Variants of the Mitsua/elan-mt model family}
