--- a/sections/subsections/trans-results.tex
+++ b/sections/subsections/trans-results.tex
@@ -9,23 +9,34 @@
 GoogleTranslator-ja-en & 0.0948 & \textbf{0.1598} & \textbf{0.3534} & \textbf{0.3262} & 0.5831 & 0.7378\\
 \midrule
 % Elan Models
-Elan Base & 0.0261 & 0.0719 & 0.2123 & 0.1848 & 0.5586 & 0.591 \\
-Elan BT & 0.047 & 0.0978 & 0.2649 & 0.2441 & 0.5783 & 0.6475 \\
-Elan Tiny (default) & 0.0386 & 0.0895 & 0.2551 & 0.2344 & 0.5805 & 0.6374 \\
+Mitsua/elan-mt-bt-ja-en & 0.0261 & 0.0719 & 0.2123 & 0.1848 & 0.5586 & 0.591 \\
+Mitsua/elan-mt-base-ja-en & 0.047 & 0.0978 & 0.2649 & 0.2441 & 0.5783 & 0.6475 \\
+Mitsua/elan-mt-tiny-ja-en & 0.0386 & 0.0895 & 0.2551 & 0.2344 & 0.5805 & 0.6374 \\
 \midrule
 % 0.5B Models (Renamed to Qwen2.5-0.5B-Instruct)
-Qwen2.5-0.5B-Instruct (finetuned, context\_window = 5) & 0.0497 & 0.0839 & 0.2747 & 0.2581 & 0.5813 & 0.6413 \\
-Qwen2.5-0.5B-Instruct (finetuned, context\_window = 4) & 0.0556 & 0.0910 & 0.2836 & 0.2663 & 0.5820 & 0.6445 \\
-Qwen2.5-0.5B-Instruct (finetuned, context\_window = 3) & 0.0482 & 0.0836 & 0.2836 & 0.2662 & 0.5822 & 0.6354 \\
-Qwen2.5-0.5B-Instruct (finetuned, context\_window = 2) & 0.0497 & 0.0843 & 0.2789 & 0.2618 & 0.5802 & 0.6396 \\
-Qwen2.5-0.5B-Instruct (finetuned, context\_window = 1) & 0.0498 & 0.0797 & 0.2788 & 0.2608 & 0.5782 & 0.6319 \\
+Qwen2.5-0.5B-Instruct & 0.0497 & 0.0839 & 0.2747 & 0.2581 & 0.5813 & 0.6413 \\
+(finetuned, context\_window = 5) & & & & & & \\
+Qwen2.5-0.5B-Instruct & 0.0556 & 0.0910 & 0.2836 & 0.2663 & 0.5820 & 0.6445 \\
+(finetuned, context\_window = 4) & & & & & & \\
+Qwen2.5-0.5B-Instruct & 0.0482 & 0.0836 & 0.2836 & 0.2662 & 0.5822 & 0.6354 \\
+(finetuned, context\_window = 3) & & & & & & \\
+Qwen2.5-0.5B-Instruct & 0.0497 & 0.0843 & 0.2789 & 0.2618 & 0.5802 & 0.6396 \\
+(finetuned, context\_window = 2) & & & & & & \\
+Qwen2.5-0.5B-Instruct & 0.0498 & 0.0797 & 0.2788 & 0.2608 & 0.5782 & 0.6319 \\
+(finetuned, context\_window = 1) & & & & & & \\
+
 \midrule
 % 1.5B Models (Renamed to Qwen1.5-1.5B-Instruct)
-Qwen2.5-1.5B-Instruct (finetuned, context\_window = 5) & 0.0618 & 0.098 & 0.2905 & 0.2721 & 0.6042 & 0.6813 \\
-Qwen2.5-1.5B-Instruct (finetuned, context\_window = 4) & 0.05282 & 0.0986 & 0.2868 & 0.2685 & 0.6027 & 0.683 \\
-Qwen2.5-1.5B-Instruct (finetuned, context\_window = 3) & 0.0621 & 0.1014 & 0.2939 & 0.2749 & 0.603 & 0.6899 \\
-Qwen2.5-1.5B-Instruct (finetuned, context\_window = 2) & 0.0623 & 0.0995 & 0.2944 & 0.2756 & 0.6044 & 0.6905 \\
-Qwen2.5-1.5B-Instruct (finetuned, context\_window = 1) & 0.0598 & 0.1021 & 0.2903 & 0.2719 & \textbf{0.6049} & 0.6914 \\
+Qwen2.5-1.5B-Instruct & 0.0618 & 0.098 & 0.2905 & 0.2721 & 0.6042 & 0.6813 \\
+(finetuned, context\_window = 5) & & & & & & \\
+Qwen2.5-1.5B-Instruct & 0.05282 & 0.0986 & 0.2868 & 0.2685 & 0.6027 & 0.683 \\
+(finetuned, context\_window = 4) & & & & & & \\
+Qwen2.5-1.5B-Instruct & 0.0621 & 0.1014 & 0.2939 & 0.2749 & 0.603 & 0.6899 \\
+(finetuned, context\_window = 3) & & & & & & \\
+Qwen2.5-1.5B-Instruct & 0.0623 & 0.0995 & 0.2944 & 0.2756 & 0.6044 & 0.6905 \\
+(finetuned, context\_window = 2) & & & & & & \\
+Qwen2.5-1.5B-Instruct & 0.0598 & 0.1021 & 0.2903 & 0.2719 & \textbf{0.6049} & 0.6914 \\
+(finetuned, context\_window = 1) & & & & & & \\
 \midrule
 2+2 \cite{hinami2021towards} & 0.2114 & - & - & - & - & 0.779 \\
 Scene-NMT \cite{hinami2021towards} &  0.2102 & - & - & - & - &  0.782 \\
