--- a/sections/subsections/overall-pip.tex
+++ b/sections/subsections/overall-pip.tex
@@ -10,9 +10,9 @@
 \toprule
 \textbf{Detection Statistics} & \textbf{Results} \\
 Total GT Bubbles & 1586 \\
-Matched Pairs & 0.4984 \\
-Missed Detections & 0.4984 \\
-False Positives & 0.4625 \\
+Matched Pairs &    1513 (95.40\%) \\
+   Missed Detections & 73 (4.60\%)\\
+   False Positives &   98 (6.18\%)\\
 \midrule
 \textbf{OCR Metrics (Matched Bubbles)} & \textbf{Results}\\
 CER & 0.1516 \\
