--- a/main.tex
+++ b/main.tex
@@ -122,6 +122,8 @@
         OCR & Optical Character Recognition \\
         \\
         UC & Use Case\\
+        \\
+        YOLO & You Only Look Once\\
     \end{tabular}
 \end{table}
 
