--- a/main.tex
+++ b/main.tex
@@ -238,6 +238,7 @@
 
 
 \section{Desktop Application}
+\input{sections/app}
 \subsection{Architecture Overview}
 \input{sections/subsections/architecture-overview}
 
