--- a/sections/subsections/trans-results.tex
+++ b/sections/subsections/trans-results.tex
@@ -24,6 +24,8 @@ Qwen2.5-0.5B-Instruct & 0.0497 & 0.0843 & 0.2789 & 0.2618 & 0.5802 & 0.6396 \\
 (finetuned, context\_window = 2) & & & & & & \\
 Qwen2.5-0.5B-Instruct & 0.0498 & 0.0797 & 0.2788 & 0.2608 & 0.5782 & 0.6319 \\
 (finetuned, context\_window = 1) & & & & & & \\
+Qwen2.5-0.5B-Instruct & 0.033 & 0.0531 & 0.2782 & 0.2565 & 0.574 & 0.6367\\
+(finetuned, context\_window = 0) & & & & & & \\
 
 \midrule
 % 1.5B Models (Renamed to Qwen1.5-1.5B-Instruct)
@@ -37,6 +39,8 @@ Qwen2.5-1.5B-Instruct & 0.0623 & 0.0995 & 0.2944 & 0.2756 & 0.6044 & 0.6905 \\
 (finetuned, context\_window = 2) & & & & & & \\
 Qwen2.5-1.5B-Instruct & 0.0598 & 0.1021 & 0.2903 & 0.2719 & \textbf{0.6049} & 0.6914 \\
 (finetuned, context\_window = 1) & & & & & & \\
+Qwen2.5-1.5B-Instruct & 0.0583 & 0.0988 & 0.2784 & 0.2689 & 0.6014 & 0.6836\\
+(finetuned, context\_window = 0) & & & & & & \\
 \midrule
 2+2 \cite{hinami2021towards} & 0.2114 & - & - & - & - & 0.779 \\
 Scene-NMT \cite{hinami2021towards} &  0.2102 & - & - & - & - &  0.782 \\
