--- a/main.tex
+++ b/main.tex
@@ -258,16 +258,16 @@
 \subsection{Functional Components}
 \input{sections/subsections/functional-modules}
 
-\subsubsection{Segmentation Module}
+\subsubsection{File Input}
 \input{sections/subsubsections/segmentation-module}
 
-\subsubsection{OCR Module}
+\subsubsection{Processing}
 \input{sections/subsubsections/ocr-module}
 
-\subsubsection{Machine Translation Module}
+\subsubsection{Visualization}
 \input{sections/subsubsections/machine-trans-module}
 
-\subsubsection{Typesetting Module}
+\subsubsection{Typesetting and Export}
 \input{sections/subsubsections/typesetter-module}
 
 \subsection{Exception Handling}
