--- a/sections/subsubsections/machine-trans-module.tex
+++ b/sections/subsubsections/machine-trans-module.tex
@@ -1,1 +1,2 @@
-The \texttt{TranslateTab} handles translation of text using the \texttt{ElanMT} transformer model. The model is lazily loaded when requested. Three models are available: \textbf{tiny}, \textbf{base}, \textbf{bt}. The interface shows a split view, a list of bubbles, and the read-only Japanese source text with their editable field for translated text.
+The core workspace is a ZoomableGraphicsView allowing pan and zoom operations. The application renders the segmentation results as half transparent vector overlays on top of the source image. Text previews are rendered using QGraphicsTextItem on top of a white background to simulate the final typeset look. 
+The EditorPanel allows users to review and modify the results. It displays the read-only OCR text and an editable field for the translation. Modifications in the editor trigger immediate updates to the visual canvas via signal-slot connections, ensuring the text overlay reflects the current data state.
