--- a/sections/subsubsections/typesetter-module.tex
+++ b/sections/subsubsections/typesetter-module.tex
@@ -1,1 +1,1 @@
-The \texttt{ReplaceTab} handles typesetting. It replaces the source text in bubbles with translated text using the \texttt{MangaTypesetter} backend. Because the backend typesetter requires binary masks rather than vector polygons, the system implements a helper function, \texttt{\_polygon\_to\_mask}, which rasterizes the \texttt{QPolygon} objects into Numpy arrays using \texttt{cv2.fillPoly}. The engine paints a white background and renders the translated text over the original image using the generated masks. The final result is converted from a raw byte array back into a QImage for display and export to disk. 
+The export functionality is handled by the save\_current method. To prepare for typesetting, the system converts the vector QPolygon data back into raster masks using cv2.fillPoly. The MangaTypesetter module then uses these masks to in-paint the background and render the final translated text onto the image. The result is saved a PNG file.
