--- a/sections/app.tex
+++ b/sections/app.tex
@@ -1,3 +1,4 @@
+Figure \ref{fig:app_screenshot} illustrates the main interface of the proposed desktop application, where users can load manga images, visualize detected speech bubbles and translation outputs.
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{img/app-screenshot.png}
