--- a/sections/subsections/functional-modules.tex
+++ b/sections/subsections/functional-modules.tex
@@ -1,1 +1,1 @@
-The application workflow is divided into four sequential stages, each managed by a dedicated controller class inheriting from QWidget. 
+The application workflow consist of four interacting modules handling input, inference, interaction, and export.
