--- a/sections/subsections/evaluation-process.tex
+++ b/sections/subsections/evaluation-process.tex
@@ -94,4 +94,4 @@ A critical consideration for end-to-end pipeline evaluation is the treatment of 
 \vspace{1em}
 \textbf{Context-Aware Translation Metrics:}
 
-Unlike sentence-level tests, this evaluation measures translation quality in the original place, taking into account text from previous and next bubbles.  We report BLEU and COMET score as the main metrics on the matched speed bubbles.
+Unlike sentence-level tests, this evaluation measures translation quality by taking into account text from previous and next bubbles.  We report BLEU and COMET score as the main metrics on the matched speed bubbles.
